--- a/OpenWrt_x86.config
+++ b/OpenWrt_x86.config
@@ -4714,6 +4714,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-theme-argon is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-material is not set
+CONFIG_PACKAGE_luci-theme-neobird=y
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 # end of 4. Themes
 
